tests/specs/publish/raw_imports/bytes.out
Check [WILDCARD]bytes_main.ts
Checking for slow types in the public API...
error[unstable-raw-import]: bytes imports have not been stabilized
 --> [WILDLINE]bytes_main.ts:1:18
  | 
1 | import data from "./data.bin" with { type: "bytes" };
  |                  ^^^^^^^^^^^^ the specifier
  | 
  = hint: for the time being, embed the data directly into a JavaScript file (ex. as encoded base64 text)

  docs: https://github.com/denoland/deno/issues/29904

error: Found 1 problem
